Apartado theteam acabado e i18n

--- a/templates/webapp/ourgroup.html
+++ b/templates/webapp/ourgroup.html
@@ -18,20 +18,20 @@
                     </div>
                     <div style="float: right; width: 50%;">
                     <h3 class="recipe-panel-title">Sergio García</h3>
-                        <div class="recipe-more-title">Project Manager</div>
-                        <div class="recipe-more-title">suemail@alum.us.es</div>
+                        <div class="recipe-more-title">{% trans "Project Manager" %}</div>
+                        <div class="recipe-more-title">sergaralo@alum.us.es</div>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 recipe-tastes-parent">
                 <div class="panel panel-body recipe-tastes">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars1.githubusercontent.com/u/3688325?s=400" lenght="250px" width="250px"> </img>
+                        <img src="https://avatars0.githubusercontent.com/u/6684826?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Sergio García</h3>
-                        <div class="recipe-more-title">Project Manager</div>
-                        <div class="recipe-more-title">suemail@alum.us.es</div>
+                    <h3 class="recipe-panel-title">David González</h3>
+                        <div class="recipe-more-title">{% trans "Developer" %}</div>
+                        <div class="recipe-more-title">jesgonbel@alum.us.es</div>
                     </div>
                 </div>
             </div>
@@ -41,24 +41,24 @@
             <div class="col-md-6 recipe-more-parent">
                 <div class="panel panel-body recipe-more">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars1.githubusercontent.com/u/3688325?s=400" lenght="250px" width="250px"> </img>
+                        <img src="https://avatars3.githubusercontent.com/u/6688705?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Sergio García</h3>
-                        <div class="recipe-more-title">Project Manager</div>
-                        <div class="recipe-more-title">suemail@alum.us.es</div>
+                    <h3 class="recipe-panel-title">Arturo Jiménez</h3>
+                        <div class="recipe-more-title">{% trans "Analyst and Tester" %}</div>
+                        <div class="recipe-more-title">artjimlop@alum.us.es</div>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 recipe-tastes-parent">
                 <div class="panel panel-body recipe-tastes">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars1.githubusercontent.com/u/3688325?s=400" lenght="250px" width="250px"> </img>
+                        <img src="https://avatars0.githubusercontent.com/u/6689077?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Sergio García</h3>
-                        <div class="recipe-more-title">Project Manager</div>
-                        <div class="recipe-more-title">suemail@alum.us.es</div>
+                    <h3 class="recipe-panel-title">Antonio León</h3>
+                        <div class="recipe-more-title">{% trans "Analyst and Tester" %}</div>
+                        <div class="recipe-more-title">antleocar1@alum.us.es</div>
                     </div>
                 </div>
             </div>
@@ -68,24 +68,24 @@
             <div class="col-md-6 recipe-more-parent">
                 <div class="panel panel-body recipe-more">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars1.githubusercontent.com/u/3688325?s=400" lenght="250px" width="250px"> </img>
+                        <img src="https://avatars3.githubusercontent.com/u/1993257?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Sergio García</h3>
-                        <div class="recipe-more-title">Project Manager</div>
-                        <div class="recipe-more-title">suemail@alum.us.es</div>
+                    <h3 class="recipe-panel-title">Sergio Rodríguez</h3>
+                        <div class="recipe-more-title">{% trans "Developer" %}</div>
+                        <div class="recipe-more-title">serrodcal@alum.us.es</div>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 recipe-tastes-parent">
                 <div class="panel panel-body recipe-tastes">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars1.githubusercontent.com/u/3688325?s=400" lenght="250px" width="250px"> </img>
+                        <img src="https://avatars0.githubusercontent.com/u/5088244?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Sergio García</h3>
-                        <div class="recipe-more-title">Project Manager</div>
-                        <div class="recipe-more-title">suemail@alum.us.es</div>
+                    <h3 class="recipe-panel-title">Juan Manuel López</h3>
+                        <div class="recipe-more-title">{% trans "Developer" %}</div>
+                        <div class="recipe-more-title">jualoppaz@alum.us.es</div>
                     </div>
                 </div>
             </div>
@@ -94,24 +94,12 @@
             <div class="col-md-6 recipe-more-parent">
                 <div class="panel panel-body recipe-more">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars1.githubusercontent.com/u/3688325?s=400" lenght="250px" width="250px"> </img>
+                        <img src="https://avatars1.githubusercontent.com/u/545251?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Sergio García</h3>
-                        <div class="recipe-more-title">Project Manager</div>
-                        <div class="recipe-more-title">suemail@alum.us.es</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 recipe-tastes-parent">
-                <div class="panel panel-body recipe-tastes">
-                    <div style="float: left; width: 50%;">
-                        <img src="https://avatars1.githubusercontent.com/u/3688325?s=400" lenght="250px" width="250px"> </img>
-                    </div>
-                    <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Sergio García</h3>
-                        <div class="recipe-more-title">Project Manager</div>
-                        <div class="recipe-more-title">suemail@alum.us.es</div>
+                    <h3 class="recipe-panel-title">Rafael Vázquez</h3>
+                        <div class="recipe-more-title">{% trans "Developer Lead" %}</div>
+                        <div class="recipe-more-title">rafvazsan@alum.us.es</div>
                     </div>
                 </div>
             </div>
