Cambios en el template para que no esté relacionado con los css de recipe

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -1326,6 +1326,28 @@ header .container {
    width: 100%;
 }
 
+.team-more-parent {
+    padding-left: 0;
+    padding-right: 5px;
+}
+
+.team-more-title {
+    color: #696969;
+    font-weight: bold;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.team-more-parent {
+    padding-left: 0;
+    padding-right: 5px;
+}
+
+.team-panel-title {
+    color: #CC3E27;
+    margin: 5px 0 10px;
+}
+
 #container {
     position: relative;
     min-height: 100%;
