--- a/templates/webapp/ourgroup.html
+++ b/templates/webapp/ourgroup.html
@@ -11,95 +11,95 @@
 
 
     <div class="row">
-            <div class="col-md-6 recipe-more-parent">
-                <div class="panel panel-body recipe-more">
+            <div class="col-md-6 team-more-parent">
+                <div class="panel panel-body team-more">
                     <div style="float: left; width: 50%;">
                         <img src="https://avatars1.githubusercontent.com/u/3688325?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Sergio García</h3>
-                        <div class="recipe-more-title">{% trans "Project Manager" %}</div>
-                        <div class="recipe-more-title">sergaralo@alum.us.es</div>
+                    <h3 class="team-panel-title">Sergio García</h3>
+                        <div class="team-more-title">{% trans "Project Manager" %}</div>
+                        <div class="team-more-title">sergaralo@alum.us.es</div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 recipe-tastes-parent">
-                <div class="panel panel-body recipe-tastes">
+            <div class="col-md-6 team-tastes-parent">
+                <div class="panel panel-body team-tastes">
                     <div style="float: left; width: 50%;">
                         <img src="https://avatars0.githubusercontent.com/u/6684826?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">David González</h3>
-                        <div class="recipe-more-title">{% trans "Developer" %}</div>
-                        <div class="recipe-more-title">jesgonbel@alum.us.es</div>
+                    <h3 class="team-panel-title">David González</h3>
+                        <div class="team-more-title">{% trans "Developer" %}</div>
+                        <div class="team-more-title">jesgonbel@alum.us.es</div>
                     </div>
                 </div>
             </div>
         </div>
 
     <div class="row">
-            <div class="col-md-6 recipe-more-parent">
-                <div class="panel panel-body recipe-more">
+            <div class="col-md-6 team-more-parent">
+                <div class="panel panel-body team-more">
                     <div style="float: left; width: 50%;">
                         <img src="https://avatars3.githubusercontent.com/u/6688705?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Arturo Jiménez</h3>
-                        <div class="recipe-more-title">{% trans "Analyst and Tester" %}</div>
-                        <div class="recipe-more-title">artjimlop@alum.us.es</div>
+                    <h3 class="team-panel-title">Arturo Jiménez</h3>
+                        <div class="team-more-title">{% trans "Analyst and Tester" %}</div>
+                        <div class="team-more-title">artjimlop@alum.us.es</div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 recipe-tastes-parent">
-                <div class="panel panel-body recipe-tastes">
+            <div class="col-md-6 team-tastes-parent">
+                <div class="panel panel-body team-tastes">
                     <div style="float: left; width: 50%;">
                         <img src="https://avatars0.githubusercontent.com/u/6689077?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Antonio León</h3>
-                        <div class="recipe-more-title">{% trans "Analyst and Tester" %}</div>
-                        <div class="recipe-more-title">antleocar1@alum.us.es</div>
+                    <h3 class="team-panel-title">Antonio León</h3>
+                        <div class="team-more-title">{% trans "Analyst and Tester" %}</div>
+                        <div class="team-more-title">antleocar1@alum.us.es</div>
                     </div>
                 </div>
             </div>
         </div>
 
     <div class="row">
-            <div class="col-md-6 recipe-more-parent">
-                <div class="panel panel-body recipe-more">
+            <div class="col-md-6 team-more-parent">
+                <div class="panel panel-body team-more">
                     <div style="float: left; width: 50%;">
                         <img src="https://avatars3.githubusercontent.com/u/1993257?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Sergio Rodríguez</h3>
-                        <div class="recipe-more-title">{% trans "Developer" %}</div>
-                        <div class="recipe-more-title">serrodcal@alum.us.es</div>
+                    <h3 class="team-panel-title">Sergio Rodríguez</h3>
+                        <div class="team-more-title">{% trans "Developer" %}</div>
+                        <div class="team-more-title">serrodcal@alum.us.es</div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 recipe-tastes-parent">
-                <div class="panel panel-body recipe-tastes">
+            <div class="col-md-6 team-tastes-parent">
+                <div class="panel panel-body team-tastes">
                     <div style="float: left; width: 50%;">
                         <img src="https://avatars0.githubusercontent.com/u/5088244?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Juan Manuel López</h3>
-                        <div class="recipe-more-title">{% trans "Developer" %}</div>
-                        <div class="recipe-more-title">jualoppaz@alum.us.es</div>
+                    <h3 class="team-panel-title">Juan Manuel López</h3>
+                        <div class="team-more-title">{% trans "Developer" %}</div>
+                        <div class="team-more-title">jualoppaz@alum.us.es</div>
                     </div>
                 </div>
             </div>
         </div>
     <div class="row">
-            <div class="col-md-6 recipe-more-parent">
-                <div class="panel panel-body recipe-more">
+            <div class="col-md-6 team-more-parent">
+                <div class="panel panel-body team-more">
                     <div style="float: left; width: 50%;">
                         <img src="https://avatars1.githubusercontent.com/u/545251?s=400" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
-                    <h3 class="recipe-panel-title">Rafael Vázquez</h3>
-                        <div class="recipe-more-title">{% trans "Developer Lead" %}</div>
-                        <div class="recipe-more-title">rafvazsan@alum.us.es</div>
+                    <h3 class="team-panel-title">Rafael Vázquez</h3>
+                        <div class="team-more-title">{% trans "Developer Lead" %}</div>
+                        <div class="team-more-title">rafvazsan@alum.us.es</div>
                     </div>
                 </div>
             </div>
