Modificados los CSS para que no tengan referencias con recipe ni cruzadas

--- a/templates/webapp/contact.html
+++ b/templates/webapp/contact.html
@@ -11,9 +11,9 @@
 
     <div class="row">
         <div class="col-md-6 contact-about-parent">
-            <div class="panel panel-body recipe-more">
+            <div class="panel panel-body contact-more">
                 <h3 class="contact-about-us-title">{% trans "About us" %}</h3>
-                <p class="terms-text-soft">{% trans "The idea that originated EatHub’s development was that recipes are not something final. It changes, you adapt to you personal taste or maybe someone advises you; so we decided to do manage the real life recipe's evolution . With this, you can control the life your recipes, help to improve your friend’s, copy them and giving your personal touch… You create a recipe, you share it,  everyone contributes, it evolves and the whole community benefits." %} </p>
+                <p class="contact-text-soft">{% trans "The idea that originated EatHub’s development was that recipes are not something final. It changes, you adapt to you personal taste or maybe someone advises you; so we decided to do manage the real life recipe's evolution . With this, you can control the life your recipes, help to improve your friend’s, copy them and giving your personal touch… You create a recipe, you share it,  everyone contributes, it evolves and the whole community benefits." %} </p>
             </div>
         </div>
         <div class="col-md-6 recipe-notes-parent">
@@ -38,11 +38,11 @@
     <div class="row panel panel-body">
         <h3 class="contact-about-us-title">{% trans "Contact Us" %}</h3>
 
-        <p class="terms-text-soft">
+        <p class="contact-text-soft">
             {% trans "This website is currently under development by the members of the fifth group of Software Engineering and Professional Practice (IT - Software Engineering, University of Seville)." %}
             {% trans "Any feedback you can give to us will be very useful. Please, feel free to contact us by sending an email to our address: eathub.contact@gmail.com or by clicking in the following button:" %}
             </p>
-        <p class="terms-text-soft">
+        <p class="contact-text-soft">
             {% trans "Thanks for your interest!" %}
         </p>
             <a class="plus btn btn-contact" href="mailto:eathub.contact@gmail.com?subject=Feedback sobre eathub!">{% trans "Send email" %}</a>
