--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -1330,6 +1330,27 @@ header .container {
     color: #5a5a5a;
 }
 
+.contact-title {
+    max-height: 120px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    margin-bottom: 20px;
+    color: #CC3E27;
+    font-size: 3em;
+}
+
+.contact-content-title {
+    color: #CC3E27;
+    margin: 5px 0 10px;
+}
+
+.contact-text-soft {
+    margin-right: 20px;
+    text-align: justify;
+    word-wrap: break-word;
+    color: #5a5a5a;
+}
+
 .contact-about-parent {
     padding-left: 0;
     padding-right: 5px;
@@ -1344,6 +1365,18 @@ header .container {
     color: #cc3e27;
     background-color: #fff;
     border-color: #cc3e27;
+}
+
+.contact-more-title {
+    color: #696969;
+    font-weight: bold;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.contact-more-parent {
+    padding-left: 0;
+    padding-right: 5px;
 }
 
 #container {
