--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -162,7 +162,7 @@
         <div class="col-md-8 footer-content">
             <div class="row">
                 <div class="col-md-2 text-center"><a href="#" class="footer-link">Terms & conditions</a></div>
-                <div class="col-md-2 text-center"><a href="#" class="footer-link">Our goals</a></div>
+                <div class="col-md-2 text-center"><a href="{% url 'ourgoals' %}" class="footer-link">Our goals</a></div>
                 <div class="col-md-2 text-center"><a href="#" class="footer-link">The team</a></div>
                 <div class="col-md-2 text-center"><a href="#" class="footer-link">Contact</a></div>
             </div>
