--- a/templates/webapp/ourgoals.html
+++ b/templates/webapp/ourgoals.html
@@ -10,13 +10,17 @@
 {% block container %}
     <div class="panel panel-default">
         <div class="container demo">
-            <div class="panel-body" id="contact">
-                <h1 class="terms-title">{% trans "Our goals" %}</h1>
-                <p class="contact-text-soft">{% trans "The strategy of the company is going to be the differentiation by the developing of a product completely new in web sector, with the intention of becoming a reference  in the kitchen-related social networks." %}
+            <div class="panel-body" id="goals">
+                <h1 class="goals-title">{% trans "Our goals" %}</h1>
+                <p class="goals-text-soft">{% trans "The strategy of the company is going to be the differentiation by the developing of a product completely new in web sector, with the intention of becoming a reference  in the kitchen-related social networks." %}
                     {% trans "There are a lot of recipes sites on the internet, most of them are blogs and there can be found a few of social networks. EatHub is framed in the second group, but making a difference between the rest and itself: the feature that makes EatHub special is also the base of the business model, the integration of a grocery list linked to online supermarkets. With this, a user can fill his “shopping cart” and then, buy it instead printing the list and going to a supermarket. This feature will also be a funding source by making economic agreements with supermarkets in order to use their services or promoting them." %}
                     {% trans "The second funding source is the use of personalized ads. Ads will be displayed in function of the product shown.We want to implement this type of personalized advertising as we believe that is innovative in such service and we will obtain more incomes than using any other advertising service. An example would be:" %}</p>
-                <img src=""> </img>
-                <p class="contact-text-soft">{%  trans "The last difference is that the application provides users with a ‘DNA’ the can edit. It is used as an affinity system and is modified every time they use the application. Users can watch a recipe as if they were another friend in order to know if this meal would like to him." %}
+                <br>
+                <div align="center">
+                    <img src="{% static 'webapp/image/ad_example.png'  %}"> </img>
+                </div>
+                <br>
+                <p class="goals-text-soft">{%  trans "The last difference is that the application provides users with a ‘DNA’ the can edit. It is used as an affinity system and is modified every time they use the application. Users can watch a recipe as if they were another friend in order to know if this meal would like to him." %}
 
                     {% trans "The main users are going to be males and females from 18 to 35 years old who already have profiles in Facebook and/or Twitter, who loves cooking and consider themselves as amateur cooks, looking for some support or improvements to their recipes. A sector of them is expected to be recently independent twenties." %}
                 </p>
