Imágenes añadidas estaticamente en lugar de usando un vinculo

--- a/templates/webapp/ourgroup.html
+++ b/templates/webapp/ourgroup.html
@@ -5,7 +5,7 @@
 {% block container %}
 
     <div class="panel main-picture-padding-team row">
-        <img src="http://www.actualidaduniversitaria.com/wp-content/uploads/2012/07/etsii.jpg">
+        <img src="{% static 'webapp/image/etsii.jpg'  %}">
         </img>
     </div>
 
@@ -14,7 +14,7 @@
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars1.githubusercontent.com/u/3688325?s=400" lenght="250px" width="250px"> </img>
+                        <img src="{% static 'webapp/image/3688325.jpg'  %}" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
                     <h3 class="team-panel-title">Sergio García</h3>
@@ -26,7 +26,7 @@
             <div class="col-md-6 team-tastes-parent">
                 <div class="panel panel-body team-tastes">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars0.githubusercontent.com/u/6684826?s=400" lenght="250px" width="250px"> </img>
+                        <img src="{% static 'webapp/image/6684826.jpg'  %}" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
                     <h3 class="team-panel-title">David González</h3>
@@ -41,7 +41,7 @@
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars3.githubusercontent.com/u/6688705?s=400" lenght="250px" width="250px"> </img>
+                        <img src="{% static 'webapp/image/6688705.jpg'  %}" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
                     <h3 class="team-panel-title">Arturo Jiménez</h3>
@@ -53,7 +53,7 @@
             <div class="col-md-6 team-tastes-parent">
                 <div class="panel panel-body team-tastes">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars0.githubusercontent.com/u/6689077?s=400" lenght="250px" width="250px"> </img>
+                        <img src="{% static 'webapp/image/6689077.jpg'  %}" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
                     <h3 class="team-panel-title">Antonio León</h3>
@@ -68,7 +68,7 @@
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars3.githubusercontent.com/u/1993257?s=400" lenght="250px" width="250px"> </img>
+                        <img src="{% static 'webapp/image/1993257.jpg'  %}" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
                     <h3 class="team-panel-title">Sergio Rodríguez</h3>
@@ -80,7 +80,7 @@
             <div class="col-md-6 team-tastes-parent">
                 <div class="panel panel-body team-tastes">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars0.githubusercontent.com/u/5088244?s=400" lenght="250px" width="250px"> </img>
+                        <img src="{% static 'webapp/image/5088244.jpg'  %}" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
                     <h3 class="team-panel-title">Juan Manuel López</h3>
@@ -94,7 +94,7 @@
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
                     <div style="float: left; width: 50%;">
-                        <img src="https://avatars1.githubusercontent.com/u/545251?s=400" lenght="250px" width="250px"> </img>
+                        <img src="{% static 'webapp/image/545251.png'  %}" lenght="250px" width="250px"> </img>
                     </div>
                     <div style="float: right; width: 50%;">
                     <h3 class="team-panel-title">Rafael Vázquez</h3>
