Actualmente solo busca por receta. Con el tema de obtener los perfiles tenemos un problema ya que el diccionario devuelto por la consulta full-text devuelve el user_id que es un ObjectId y no podemos obtener la imagen para mostrar. Subo para hacer pull request y tener una primera busqueda en develop de cara a presentar la app en la proxima exposicion.

--- a/templates/webapp/search_result.html
+++ b/templates/webapp/search_result.html
@@ -14,11 +14,15 @@
                     <img class="img-rounded"
                          src="{{ match.main_image.url }}"/>
 
-                    <h3 class="user-name"><a href="">
+                    <h3 class="user-name"><a href="{% url 'recipe' match.id %}">
                         {{ match.title }}</a></h3>
                 </div>
         {% endfor %}
     </div>
+ {% else %}
+    <div class="recipe-name">
+            <h2 class="follow-msg">{% trans "No results found!" %}</h2>
+        </div>
 {% endif %}
 
 {% if matches_profile %}
