--- a/templates/password_reset/reset.html
+++ b/templates/password_reset/reset.html
@@ -11,7 +11,9 @@
 	    </div>
         <div id="message" class="col-mf-4 col-md-offset-4 panel-body-password-recovery">
             {% if invalid %}{% url "password_reset_recover" as recovery_url %}
-                <p>{% blocktrans %}Sorry, this password reset link is invalid. You can still <a href="{{ recovery_url }}">request a new one</a>.{% endblocktrans %}</p>
+                <div class="alert alert-danger">
+                    <p>{% blocktrans %}Sorry, this password reset link is invalid. You can still <a href="{{ recovery_url }}">request a new one</a>.{% endblocktrans %}</p>
+                </div>
             {% else %}
                 <p>{% blocktrans %}Hi, <strong>{{ username }}</strong>. Please choose your new password.{% endblocktrans %}</p>
                 <form method="post" action="{% url "password_reset_reset" token %}">
