Añadido estilo a los mensajes de error del formulario para reseteo de la contraseña.

--- a/templates/password_reset/recovery_form.html
+++ b/templates/password_reset/recovery_form.html
@@ -16,15 +16,18 @@
             </p>
             <form method="post" action="{{ url }}">
 	    	    {% csrf_token %}
-	    	    {{ form.as_p }}
-	    	    <div class="alert alert-danger">
-                    <a class="close" data-dismiss="alert">×</a>
-                    {% for field, errors in form.errors.items %}
-                        {% for error in errors %}
-                            {{  error  }}
+                <label for="username_or_email">{% trans "Username or email" %}</label>
+	    	    <input id="id_username_or_email" name="username_or_email" type="text"/>
+	    	    {% if form.errors %}
+                    <div class="alert alert-danger">
+                        <a class="close" data-dismiss="alert">×</a>
+                        {% for field, errors in form.errors.items %}
+                            {% for error in errors %}
+                                {{  error  }}
+                            {% endfor %}
                         {% endfor %}
-                    {% endfor %}
-                </div>
+                    </div>
+                {% endif %}
                 <p><input type="submit" class="plus btn btn-default" value="{% trans "Recover my password" %}"></p>
 	        </form>
         </div>
