--- a/templates/webapp/ourgroup.html
+++ b/templates/webapp/ourgroup.html
@@ -9,14 +9,18 @@
         </img>
     </div>
 
+    <div class="panel panel-body row group-description">
+        <p class="text-soft"> {% trans "All the members of the team are students of Software Engineering and Professional Practice (IT - Software Engineering, University of Seville)" %}  </p>
+    </div>
+
 
     <div class="row">
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
-                    <div style="float: left; width: 50%;">
-                        <img src="{% static 'webapp/image/3688325.jpg'  %}" lenght="250px" width="250px"> </img>
+                    <div style="float: left; width: 33%;">
+                        <img src="{% static 'webapp/image/3688325.jpg'  %}" lenght="125px" width="125px"> </img>
                     </div>
-                    <div style="float: right; width: 50%;">
+                    <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">Sergio García</h3>
                         <div class="team-more-title">{% trans "Project Manager" %}</div>
                         <div class="team-more-title">sergaralo@alum.us.es</div>
@@ -25,25 +29,26 @@
             </div>
             <div class="col-md-6 team-tastes-parent">
                 <div class="panel panel-body team-tastes">
-                    <div style="float: left; width: 50%;">
-                        <img src="{% static 'webapp/image/6684826.jpg'  %}" lenght="250px" width="250px"> </img>
+                    <div style="float: left; width: 33%;">
+                        <img src="{% static 'webapp/image/6684826.jpg'  %}" lenght="125px" width="125px"> </img>
                     </div>
-                    <div style="float: right; width: 50%;">
+                    <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">David González</h3>
                         <div class="team-more-title">{% trans "Developer" %}</div>
                         <div class="team-more-title">jesgonbel@alum.us.es</div>
                     </div>
                 </div>
             </div>
-        </div>
+    </div>
+
 
     <div class="row">
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
-                    <div style="float: left; width: 50%;">
-                        <img src="{% static 'webapp/image/6688705.jpg'  %}" lenght="250px" width="250px"> </img>
+                    <div style="float: left; width: 33%;">
+                        <img src="{% static 'webapp/image/6688705.jpg'  %}" lenght="125px" width="125px"> </img>
                     </div>
-                    <div style="float: right; width: 50%;">
+                    <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">Arturo Jiménez</h3>
                         <div class="team-more-title">{% trans "Analyst and Tester" %}</div>
                         <div class="team-more-title">artjimlop@alum.us.es</div>
@@ -52,10 +57,10 @@
             </div>
             <div class="col-md-6 team-tastes-parent">
                 <div class="panel panel-body team-tastes">
-                    <div style="float: left; width: 50%;">
-                        <img src="{% static 'webapp/image/6689077.jpg'  %}" lenght="250px" width="250px"> </img>
+                    <div style="float: left; width: 33%;">
+                        <img src="{% static 'webapp/image/6689077.jpg'  %}" lenght="125px" width="125px"> </img>
                     </div>
-                    <div style="float: right; width: 50%;">
+                    <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">Antonio León</h3>
                         <div class="team-more-title">{% trans "Analyst and Tester" %}</div>
                         <div class="team-more-title">antleocar1@alum.us.es</div>
@@ -67,10 +72,10 @@
     <div class="row">
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
-                    <div style="float: left; width: 50%;">
-                        <img src="{% static 'webapp/image/1993257.jpg'  %}" lenght="250px" width="250px"> </img>
+                    <div style="float: left; width: 33%;">
+                        <img src="{% static 'webapp/image/1993257.jpg'  %}" lenght="125px" width="125px"> </img>
                     </div>
-                    <div style="float: right; width: 50%;">
+                    <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">Sergio Rodríguez</h3>
                         <div class="team-more-title">{% trans "Developer" %}</div>
                         <div class="team-more-title">serrodcal@alum.us.es</div>
@@ -79,10 +84,10 @@
             </div>
             <div class="col-md-6 team-tastes-parent">
                 <div class="panel panel-body team-tastes">
-                    <div style="float: left; width: 50%;">
-                        <img src="{% static 'webapp/image/5088244.jpg'  %}" lenght="250px" width="250px"> </img>
+                    <div style="float: left; width: 33%;">
+                        <img src="{% static 'webapp/image/5088244.jpg'  %}" lenght="125px" width="125px"> </img>
                     </div>
-                    <div style="float: right; width: 50%;">
+                    <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">Juan Manuel López</h3>
                         <div class="team-more-title">{% trans "Developer" %}</div>
                         <div class="team-more-title">jualoppaz@alum.us.es</div>
@@ -93,10 +98,10 @@
     <div class="row">
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
-                    <div style="float: left; width: 50%;">
-                        <img src="{% static 'webapp/image/545251.png'  %}" lenght="250px" width="250px"> </img>
+                    <div style="float: left; width: 33%;">
+                        <img src="{% static 'webapp/image/545251.png'  %}" lenght="125px" width="125px"> </img>
                     </div>
-                    <div style="float: right; width: 50%;">
+                    <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">Rafael Vázquez</h3>
                         <div class="team-more-title">{% trans "Developer Lead" %}</div>
                         <div class="team-more-title">rafvazsan@alum.us.es</div>
