--- a/templates/webapp/ourgroup.html
+++ b/templates/webapp/ourgroup.html
@@ -18,7 +18,7 @@
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
                     <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/3688325.jpg'  %}" lenght="125px" width="125px"> </img>
+                        <img src="{% static 'webapp/image/3688325.jpg'  %}" lenght="auto" width="125px"> </img>
                     </div>
                     <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">Sergio García</h3>
@@ -30,7 +30,7 @@
             <div class="col-md-6 team-tastes-parent">
                 <div class="panel panel-body team-tastes">
                     <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/6684826.jpg'  %}" lenght="125px" width="125px"> </img>
+                        <img src="{% static 'webapp/image/6684826.jpg'  %}" lenght="auto" width="125px"> </img>
                     </div>
                     <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">David González</h3>
@@ -46,7 +46,7 @@
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
                     <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/6688705.jpg'  %}" lenght="125px" width="125px"> </img>
+                        <img src="{% static 'webapp/image/6688705.jpg'  %}" lenght="auto" width="125px"> </img>
                     </div>
                     <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">Arturo Jiménez</h3>
@@ -58,7 +58,7 @@
             <div class="col-md-6 team-tastes-parent">
                 <div class="panel panel-body team-tastes">
                     <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/6689077.jpg'  %}" lenght="125px" width="125px"> </img>
+                        <img src="{% static 'webapp/image/6689077.jpg'  %}" lenght="auto" width="125px"> </img>
                     </div>
                     <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">Antonio León</h3>
@@ -73,7 +73,7 @@
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
                     <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/1993257.jpg'  %}" lenght="125px" width="125px"> </img>
+                        <img src="{% static 'webapp/image/1993257.jpg'  %}" lenght="auto" width="125px"> </img>
                     </div>
                     <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">Sergio Rodríguez</h3>
@@ -85,7 +85,7 @@
             <div class="col-md-6 team-tastes-parent">
                 <div class="panel panel-body team-tastes">
                     <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/5088244.jpg'  %}" lenght="125px" width="125px"> </img>
+                        <img src="{% static 'webapp/image/5088244.jpg'  %}" lenght="auto" width="125px"> </img>
                     </div>
                     <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">Juan Manuel López</h3>
@@ -99,7 +99,7 @@
             <div class="col-md-6 team-more-parent">
                 <div class="panel panel-body team-more">
                     <div style="float: left; width: 33%;">
-                        <img src="{% static 'webapp/image/545251.png'  %}" lenght="125px" width="125px"> </img>
+                        <img src="{% static 'webapp/image/545251.png'  %}" lenght="auto" width="125px"> </img>
                     </div>
                     <div style="float: right; width: 66%;">
                     <h3 class="team-panel-title">Rafael Vázquez</h3>
